--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
 
     <div class="above-game">
-      <p class="game-intro">Join the numbers and get to the <strong>giggling dog tile!</strong></p>
+      <p class="game-intro">Join the numbers and get to the <strong>funny dog tile!</strong></p>
       <a class="restart-button">New Game</a>
     </div>
 
